fix scrolling on iphone

--- a/demo/src/stylesheets/_blog.scss
+++ b/demo/src/stylesheets/_blog.scss
@@ -8,4 +8,6 @@ iframe {
   padding-top: $topbar-height;
   width: 100%;
   height: 100vh;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
